[project]
name = "hems-lookout"
version = "0.1.0"
description = "Send notifications whenever a HEMS approaches."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astroid>=3.3.11",
    "cachecontrol>=0.14.3",
    "cachetools>=5.5.2",
    "certifi>=2025.7.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "cryptography>=45.0.5",
    "dill>=0.4.0",
    "exceptiongroup>=1.3.0",
    "firebase-admin>=6.9.0",
    "google-api-core>=2.25.1",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-core>=2.4.3",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.2.0",
    "google-crc32c>=1.7.1",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.70.0",
    "grpcio>=1.73.1",
    "grpcio-status>=1.73.1",
    "httplib2>=0.22.0",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "isort>=6.0.1",
    "mccabe>=0.7.0",
    "msgpack>=1.1.1",
    "mypy-extensions>=1.1.0",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "platformdirs>=4.3.8",
    "pluggy>=1.6.0",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycparser>=2.22",
    "pyjwt>=2.10.1",
    "pyparsing>=3.2.3",
    "requests>=2.32.4",
    "rsa>=4.9.1",
    "tomli>=2.2.1",
    "tomlkit>=0.13.3",
    "typing-extensions>=4.14.1",
    "uritemplate>=4.2.0",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
]
